<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:roundiv="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.caiyu.cyframe.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_background"
        android:fitsSystemWindows="true">


        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="560dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_tips_login" />


        <RelativeLayout
            android:id="@+id/rl_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_header">

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/ic_login_phone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_phone"
                android:background="@null"
                android:hint="@string/hint_input_phone"
                android:textSize="@dimen/dimen_13sp"
                android:textCursorDrawable="@drawable/shape_edittext"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_939292"
                android:gravity="center_vertical"
                android:inputType="number"
                android:text="@={viewModel.phone}"
                android:maxLength="12"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/include_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            app:layout_constraintTop_toBottomOf="@+id/rl_phone">

            <ImageView
                android:id="@+id/iv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/ic_login_code" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_code"
                android:background="@null"
                android:hint="@string/hint_input_code"
                android:textSize="@dimen/dimen_13sp"
                android:textCursorDrawable="@drawable/shape_edittext"
                android:textColorHint="@color/color_939292"
                android:textColor="@color/color_333333"
                android:gravity="center_vertical"
                android:inputType="number"
                android:text="@={viewModel.code}"
                android:maxLength="6"/>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="发送验证码"
                android:textColor="@android:color/white"
                app:onClickCommand="@{viewModel.sendCodeCommand}"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_theme"
            android:textSize="@dimen/dimen_12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_phone" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="22dp"
            android:text="@string/login"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp"
            app:onClickCommand="@{viewModel.loginCommand}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/tv_third_login_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="@string/or_login_third"
            android:textColor="@color/color_939292"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="40dp"
            android:layout_height="0.5dp"
            android:layout_marginEnd="12dp"
            android:background="@color/color_939292"
            app:layout_constraintBottom_toBottomOf="@+id/tv_third_login_tips"
            app:layout_constraintEnd_toStartOf="@+id/tv_third_login_tips"
            app:layout_constraintTop_toTopOf="@+id/tv_third_login_tips" />

        <View
            android:id="@+id/textView4"
            android:layout_width="40dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="8dp"
            android:background="@color/color_939292"
            app:layout_constraintBottom_toBottomOf="@+id/tv_third_login_tips"
            app:layout_constraintStart_toEndOf="@+id/tv_third_login_tips"
            app:layout_constraintTop_toTopOf="@+id/tv_third_login_tips" />

        <TextView
            android:id="@+id/iv_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qq_login"
            android:drawableTop="@drawable/ic_qq"
            android:textColor="@color/color_939292"
            android:drawablePadding="7.5dp"
            android:gravity="center"
            android:layout_marginTop="45.5dp"
            app:onClickCommand="@{viewModel.qqLoginCommand}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/iv_wechat"
            app:layout_constraintTop_toBottomOf="@+id/tv_third_login_tips"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/iv_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wechat_login"
            android:gravity="center"
            android:drawableTop="@drawable/ic_wechat"
            android:textColor="@color/color_939292"
            android:drawablePadding="7.5dp"
            android:layout_marginTop="45.5dp"
            app:onClickCommand="@{viewModel.wechatLoginCommand}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_qq"
            app:layout_constraintTop_toBottomOf="@+id/tv_third_login_tips"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
